[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/jar_tall_mask.png" type="Texture" id=1]
[ext_resource path="res://assets/jar_tall.png" type="Texture" id=2]
[ext_resource path="res://assets/gloop.png" type="Texture" id=3]
[ext_resource path="res://assets/eyes.png" type="Texture" id=4]
[ext_resource path="res://Pet.gd" type="Script" id=5]
[ext_resource path="res://BlinkTimer.gd" type="Script" id=6]
[ext_resource path="res://assets/gloop-top.png" type="Texture" id=7]
[ext_resource path="res://assets/mouth.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 64, 0, 64, 64 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "blink"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 64, 64 ), Rect2( 64, 0, 64, 64 ), Rect2( 128, 0, 64, 64 ), Rect2( 64, 0, 64, 64 ), Rect2( 0, 0, 64, 64 ) ]
}

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[node name="Pet" type="Node2D"]
script = ExtResource( 5 )
min_fill_eye_scale_threshold_pct = 30.0

[node name="JarSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="GloopSprite" type="Sprite" parent="."]
show_behind_parent = true
light_mask = 512
position = Vector2( 0, 73 )
scale = Vector2( 0.3, 0.356 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 800, 800 )

[node name="JarMask" type="Light2D" parent="."]
light_mask = 513
texture = ExtResource( 1 )
mode = 3
range_item_cull_mask = 512
shadow_item_cull_mask = 512

[node name="FillMax" type="Position2D" parent="."]
position = Vector2( 0, -67 )

[node name="FillMin" type="Position2D" parent="."]
position = Vector2( 0, 68 )

[node name="FillLevel" type="Position2D" parent="."]
position = Vector2( 0, -67 )

[node name="GloopTop" type="Sprite" parent="FillLevel"]
light_mask = 512
position = Vector2( 0, -2 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 7 )

[node name="EyesSprite" type="Sprite" parent="FillLevel"]
position = Vector2( 0, 17 )
texture = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FillLevel/EyesSprite"]
autoplay = "blink"
playback_speed = 1.5
anims/RESET = SubResource( 6 )
anims/blink = SubResource( 7 )

[node name="BlinkTimer" type="Timer" parent="FillLevel/EyesSprite"]
wait_time = 2.0
autostart = true
script = ExtResource( 6 )

[node name="Mouth" type="Sprite" parent="FillLevel"]
position = Vector2( 0, 36 )
texture = SubResource( 8 )
